# portfolio_tracker

./: .gitignore  README.md  pipeline.py  pyproject.toml
.cursor/rules/: portfolio-tracker-core.mdc
audit/: PIPELINE_MAP.md  t0_stage_audit.py
data/: 20260306143204_Securities bookings.csv  20260328 Tradelist.csv  20260329 Tradelist.csv  20260404 Tradelist.csv  daily_holdings.csv  exited_positions.csv  fundamentals_snapshot.csv  fx_cache.csv  portfolio_cash_flows.csv  portfolio_nav.csv  portfolio_returns.csv  t0_standardized_tradelist.csv  ticker_overrides.csv
portfolio_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
power bi/: portfolio_tracker_fgi.pbix
tests/: test_irr_audit_minimal.py  test_pipeline_smoke.py  test_t0_tradelist_standardizer.py  test_t1_holdings_builder.py  test_t2_price_fetcher.py  test_t3_fx_converter.py  test_t4_portfolio_nav.py  test_t5_cash_flow_builder.py  test_t6_return_calculator.py  test_t7_fundamentals_snapshot.py
tools/: t0_tradelist_standardizer.py  t1_holdings_builder.py  t2_price_fetcher.py  t3_fx_converter.py  t4_portfolio_nav.py  t5_cash_flow_builder.py  t6_return_calculator.py  t7_fundamentals_snapshot.py
