[project]
name = "portfolio-tracker"
version = "0.1.0"
description = "Personal multi-asset portfolio tracking pipeline."
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "scipy",
    "ib_async",
    "yfinance",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
